# credit_analyzer

./: .gitignore  index.html  package-lock.json  package.json  sample_data.csv  vite.config.js
src/: main.js  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
