[package]
name = "credit-analyzer"
version = "0.0.0"
description = "Credit Card Statement Analyzer"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
csv = "1.3"
pdf-extract = "0.7"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
